# freezabledict

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-wheels.yml  run-cibuildwheel.yml  run-sdist.yml  test.yml
freezabledict/: __init__.pyi  _frozendict.pyx
frozendict/: __init__.py  __init__.pyi  _frozendict.pyx
tests/: test_frozendict.py
