[project]
name = "freezabledict"
version = "0.1.0"
description = "freezable dictionary like object inspired by frozenlist."
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]

requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools", "cython", "wheel"]

[tool.setuptools]
zip-safe = false
# Important tip: use packages arguments they help with not needing a src directory...
packages = ['freezabledict']

ext-modules = [
{name = "freezabledict._frozendict", sources = ["freezabledict/_frozendict.pyx"]}
]

[project.urls]
    repository = "https://github.com/Vizonex/freezabledict.git"
